fix: fixed page shifting on breadcrumb home icon hover

--- a/less/uw.breadcrumbs.less
+++ b/less/uw.breadcrumbs.less
@@ -20,6 +20,8 @@
 				width: 25px;
 				padding: 5px 0 5px 0;
 				margin-right: 25px;
+				transition: none;
+				margin-bottom: 0;
 				&:before {
 					right: -18px;
 				}
@@ -28,6 +30,7 @@
 				&:hover {
 				    border-bottom: 1px solid @darkgold;
 				    margin-bottom: -1px;
+					transition: none;
 				}
 			}
 			&:after {
